--- a/src/assets/scss/components/slick-grid-bizcube.scss
+++ b/src/assets/scss/components/slick-grid-bizcube.scss
@@ -2,6 +2,7 @@ div.GridDimensions {
   $gridLineHeight: 1.3em;
   box-sizing: content-box;
 	line-height: $gridLineHeight;
+  padding-left: 1px;
 
   .slick-headerrow-column.ui-state-default,
   .slick-header-column.ui-state-default,
@@ -32,5 +33,8 @@ div.GridDimensions {
     }
     */
 	}
-
+  .slick-row.ui-widget-content {
+    border-left: 1px solid silver;
+    left: -1px;
+  }
 }
