--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header id="header">
   <div class="topBar">
-    <a href="{{root}}Ticketing/TicketingHome.html" id="logo">BIZCUBE TICKETING</a>
+    <a href="{{root}}Ticketing/TicketingHome.html" id="logo">BizCuBe FAST System</a>
     <ul id="navSecondary" >
       <li>
         <a href="{{root}}Ticketing/TicketingHome.html" id="navHome" title="Home"><i class="icon"><img src="{{root}}assets/img/icon-light-home.png" /></i> <span class="text">Home</span></a></li>
