--- a/src/partials/title.html
+++ b/src/partials/title.html
@@ -1,5 +1,5 @@
 {{#ifpage 'TicketingHome'}}
-  <h1 id="pageTitle">Ticketing Home</h1>
+  <h1 id="pageTitle">FAST Home</h1>
 {{else}}
 <h1 id="pageTitle">{{page}}</h1>
 {{/ifpage}}
