update some function

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,7 +26,7 @@
       </ul>
       <ul id="moduleMenu-ticketing" class="moduleMenu" data-redirect="false">
         <li><a href="{{root}}/Ticketing/TicketingHome.html">Home</a></li>
-        <li class="packageMenu"><a href="{{root}}/Ticketing/packages.html">Packages</a></li>
+      <!--<li class="packageMenu"><a href="{{root}}/Ticketing/packages.html">Packages</a></li>-->
       </ul>
     </nav><!-- main menu -->
     <footer>BIZCUBE TICKETING</footer>
